--- a/src/app_zh_CN.properties
+++ b/src/app_zh_CN.properties
@@ -1,4 +1,11 @@
-yiqin.phone=+2 95 01 88 821
-yiqin.mail=info@domain.com
-shop.index.title=\u6613\u52E4\u5546\u8D38\u6B22\u8FCE\u60A8
+# shop title
+shop.index.title=\u6613\u52E4\u5546\u57CE\u6B22\u8FCE\u60A8
 shop.login.title=\u767B\u5F55\u6613\u52E4
+
+# shop header
+yiqin.phone=138 1115 9799
+yiqin.mail=15989111@qq.com
+shop.header.top.accout=\u6211\u7684\u6613\u52E4
+shop.header.top.wishlist=\u6536\u85CF\u5939
+shop.header.top.cart=\u8D2D\u7269\u8F66
+shop.header.top.login=\u8BF7\u767B\u5F55 | \u514D\u8D39\u6CE8\u518C
