--- a/src/app_zh_CN.properties
+++ b/src/app_zh_CN.properties
@@ -9,3 +9,12 @@ shop.header.top.accout=\u6211\u7684\u6613\u52E4
 shop.header.top.wishlist=\u6536\u85CF\u5939
 shop.header.top.cart=\u8D2D\u7269\u8F66
 shop.header.top.login=\u8BF7\u767B\u5F55 | \u514D\u8D39\u6CE8\u518C
+shop.header.nav.home=\u9996\u9875
+shop.header.nav.product=\u4EA7\u54C1
+shop.header.nav.products=consumables,paper,machines,stationery
+shop.header.nav.product.consumables=\u8017\u6750
+shop.header.nav.product.paper=\u529E\u516C\u7528\u7EB8
+shop.header.nav.product.machines=\u529E\u516C\u8BBE\u5907
+shop.header.nav.product.stationery=\u529E\u516C\u6587\u5177
+shop.header.nav.sales.promotion=\u6700\u65B0\u4FC3\u9500
+shop.header.nav.new.goods=\u65B0\u8FDB\u5546\u54C1
