--- a/src/app_zh_CN.properties
+++ b/src/app_zh_CN.properties
@@ -18,6 +18,36 @@ shop.header.nav.product.stationery=\u529E\u516C\u6587\u5177
 shop.header.nav.sales.promotion=\u6700\u65B0\u4FC3\u9500
 shop.header.nav.new.goods=\u65B0\u8FDB\u5546\u54C1
 
+# shop index body
+shop.index.left.category=\u5168\u90E8\u5546\u54C1\u5206\u7C7B
+shop.index.left.product.consumables=\u8017\u6750
+shop.index.left.product.consumables.printer=\u6253\u5370\u673A\u8017\u6750
+shop.index.left.product.consumables.copier=\u590D\u5370\u673A\u8017\u6750
+shop.index.left.product.consumables.fax=\u4F20\u771F\u673A\u8017\u6750
+shop.index.left.product.paper=\u529E\u516C\u7528\u7EB8
+shop.index.left.product.paper.copy=\u590D\u5370\u7EB8
+shop.index.left.product.paper.print=\u6253\u5370\u7EB8
+shop.index.left.product.paper.art=\u827A\u672F\u7EB8
+shop.index.left.product.paper.other=\u591A\u7528\u9014\u7EB8
+shop.index.left.product.machines=\u529E\u516C\u8BBE\u5907
+shop.index.left.product.stationery=\u529E\u516C\u6587\u5177
+shop.index.left.brands=\u6240\u6709\u54C1\u724C
+shop.index.left.brand.staples=\u53F2\u6CF0\u535A
+shop.index.left.brand.brother=Brother
+shop.index.left.brand.canon=Canon
+shop.index.left.brand.lipton=\u7ACB\u987F
+
+shop.index.right.features.items=\u7279\u8272\u5546\u54C1
+shop.index.right.product.consumables=\u8017\u6750
+shop.index.right.product.paper=\u529E\u516C\u7528\u7EB8
+shop.index.right.product.machines=\u529E\u516C\u8BBE\u5907
+shop.index.right.product.stationery=\u529E\u516C\u6587\u5177
+shop.index.right.recommended.items=\u63A8\u8350\u5546\u54C1
+
+shop.add.to.cart=\u52A0\u5165\u8D2D\u7269\u8F66
+shop.add.to.wishlist=\u6536\u85CF
+shop.add.to.compare=\u52A0\u5165\u5BF9\u6BD4
+
 # shop footer
 shop.footer.widget.about.yiqin=\u5173\u4E8E\u6613\u52E4
 shop.footer.widget.about.yiqin.info=\u6613\u52E4\u5546\u57CE\u662F\u5168\u7403\u6700\u5927\u7684\u529E\u516C\u7528\u54C1\u96F6\u552E\u548C\u5206\u9500\u5546\u4E4B\u4E00\u3002\u6211\u4EEC\u81F4\u529B\u4E8E\u4F7F\u5168\u7403\u5BA2\u6237\u90FD\u80FD\u66F4\u7B80\u5355\u5730\u91C7\u8D2D\u5230\u54C1\u7C7B\u9F50\u5168\u7684\u529E\u516C\u7528\u54C1\u3001\u529E\u516C\u8BBE\u5907\u3001\u529E\u516C\u5BB6\u5177\u548C\u5404\u7C7B\u5546\u52A1\u670D\u52A1\u3002
