add dispatcher to shop navigation

--- a/src/app_zh_CN.properties
+++ b/src/app_zh_CN.properties
@@ -7,8 +7,10 @@ yiqin.phone=138 1115 9799
 yiqin.mail=15989111@qq.com
 shop.header.top.accout=\u6211\u7684\u6613\u52E4
 shop.header.top.wishlist=\u6536\u85CF\u5939
+shop.header.top.quick.shopping=\u5FEB\u901F\u8D2D\u7269
 shop.header.top.cart=\u8D2D\u7269\u8F66
 shop.header.top.login=\u8BF7\u767B\u5F55 | \u514D\u8D39\u6CE8\u518C
+shop.header.nav.search=\u641C\u7D22
 shop.header.nav.home=\u9996\u9875
 shop.header.nav.product=\u4EA7\u54C1
 shop.header.nav.product.consumables=\u8017\u6750
