modify header / footer

--- a/src/app_zh_CN.properties
+++ b/src/app_zh_CN.properties
@@ -1,11 +1,11 @@
 # shop title
-shop.index.title=\u6613\u52E4\u5546\u57CE\u6B22\u8FCE\u60A8
-shop.login.title=\u767B\u5F55\u6613\u52E4
-
+shop.index.title=\u4F9D\u52E4\u5546\u57CE\u6B22\u8FCE\u60A8
+shop.login.title=\u767B\u5F55\u4F9D\u52E4
+\u4F9D\u52E4
 # shop header
 yiqin.phone=138 1115 9799
 yiqin.mail=15989111@qq.com
-shop.header.top.accout=\u6211\u7684\u6613\u52E4
+shop.header.top.accout=\u6211\u7684\u4F9D\u52E4
 shop.header.top.wishlist=\u6536\u85CF\u5939
 shop.header.top.quick.shopping=\u5FEB\u901F\u8D2D\u7269
 shop.header.top.cart=\u8D2D\u7269\u8F66
@@ -19,6 +19,8 @@ shop.header.nav.product.machines=\u529E\u516C\u8BBE\u5907
 shop.header.nav.product.stationery=\u529E\u516C\u6587\u5177
 shop.header.nav.sales.promotion=\u6700\u65B0\u4FC3\u9500
 shop.header.nav.new.goods=\u65B0\u8FDB\u5546\u54C1
+shop.header.nav.product.office.product=\u529E\u516C\u7528\u54C1
+shop.header.nav.product.gift.card=\u793C\u54C1\u5361\u5238
 
 # shop index body
 shop.index.left.category=\u5168\u90E8\u5546\u54C1\u5206\u7C7B
@@ -51,8 +53,8 @@ shop.add.to.wishlist=\u6536\u85CF
 shop.add.to.compare=\u52A0\u5165\u5BF9\u6BD4
 
 # shop footer
-shop.footer.widget.about.yiqin=\u5173\u4E8E\u6613\u52E4
-shop.footer.widget.about.yiqin.info=\u6613\u52E4\u5546\u57CE\u662F\u5168\u7403\u6700\u5927\u7684\u529E\u516C\u7528\u54C1\u96F6\u552E\u548C\u5206\u9500\u5546\u4E4B\u4E00\u3002\u6211\u4EEC\u81F4\u529B\u4E8E\u4F7F\u5168\u7403\u5BA2\u6237\u90FD\u80FD\u66F4\u7B80\u5355\u5730\u91C7\u8D2D\u5230\u54C1\u7C7B\u9F50\u5168\u7684\u529E\u516C\u7528\u54C1\u3001\u529E\u516C\u8BBE\u5907\u3001\u529E\u516C\u5BB6\u5177\u548C\u5404\u7C7B\u5546\u52A1\u670D\u52A1\u3002
+shop.footer.widget.about.yiqin=\u5173\u4E8E\u4F9D\u52E4
+shop.footer.widget.about.yiqin.info=\u4F9D\u52E4\u5546\u57CE\u662F\u5168\u7403\u6700\u5927\u7684\u529E\u516C\u7528\u54C1\u96F6\u552E\u548C\u5206\u9500\u5546\u4E4B\u4E00\u3002\u6211\u4EEC\u81F4\u529B\u4E8E\u4F7F\u5168\u7403\u5BA2\u6237\u90FD\u80FD\u66F4\u7B80\u5355\u5730\u91C7\u8D2D\u5230\u54C1\u7C7B\u9F50\u5168\u7684\u529E\u516C\u7528\u54C1\u3001\u529E\u516C\u8BBE\u5907\u3001\u529E\u516C\u5BB6\u5177\u548C\u5404\u7C7B\u5546\u52A1\u670D\u52A1\u3002
 shop.footer.widget.service=\u5BA2\u6237\u670D\u52A1
 shop.footer.widget.service.online.help=\u5E2E\u52A9\u4E2D\u5FC3
 shop.footer.widget.service.contact.us=\u8054\u7CFB\u6211\u4EEC
@@ -64,4 +66,4 @@ shop.footer.widget.policies.refund.policy=\u9000\u6B3E\u653F\u7B56
 shop.footer.widget.policies.billing.system=\u8BA1\u8D39\u7CFB\u7EDF
 shop.footer.widget.subscription=\u5173\u4E8E\u8BA2\u9605
 shop.footer.widget.subscription.info=\u53EA\u8981\u4E00\u4E2AE-mail\u5C31\u80FD\u4E13\u4EAB\u7CBE\u9009\u7279\u60E0
-shop.footer.bottom.copyright=© 2014 \u6613\u52E4\u5546\u57CE \u7248\u6743\u6240\u6709 .
+shop.footer.bottom.copyright=© 2014 \u4F9D\u52E4\u5546\u57CE \u7248\u6743\u6240\u6709 .
