--- a/src/app_shop_zh_CN.properties
+++ b/src/app_shop_zh_CN.properties
@@ -1,7 +1,8 @@
 # shop title
 shop.index.title=\u4F9D\u52E4\u5546\u57CE\u6B22\u8FCE\u60A8
 shop.login.title=\u767B\u5F55\u4F9D\u52E4
-\u4F9D\u52E4
+shop.cart.title=\u4F9D\u52E4\u5546\u57CE - \u8D2D\u7269\u8F66
+
 # shop header
 yiqin.phone=138 1115 9799
 yiqin.mail=15989111@qq.com
@@ -68,3 +69,11 @@ shop.footer.widget.policies.billing.system=\u8BA1\u8D39\u7CFB\u7EDF
 shop.footer.widget.subscription=\u5173\u4E8E\u8BA2\u9605
 shop.footer.widget.subscription.info=\u53EA\u8981\u4E00\u4E2AE-mail\u5C31\u80FD\u4E13\u4EAB\u7CBE\u9009\u7279\u60E0
 shop.footer.bottom.copyright=© 2014 \u4F9D\u52E4\u5546\u57CE \u7248\u6743\u6240\u6709 .
+
+# cart
+cart.item.product=\u5546\u54C1
+cart.item.price=\u5355\u4EF7(\u5143)
+cart.item.quantity=\u6570\u91CF
+cart.item.total=\u603B\u4EF7
+cart.check.title=\u586B\u5199\u5E76\u6838\u5BF9\u8BA2\u5355\u4FE1\u606F
+cart.check.receiver.information=\u6536\u8D27\u4EBA\u4FE1\u606F
