--- a/src/app_shop_zh_CN.properties
+++ b/src/app_shop_zh_CN.properties
@@ -77,3 +77,6 @@ cart.item.quantity=\u6570\u91CF
 cart.item.total=\u603B\u4EF7
 cart.check.title=\u586B\u5199\u5E76\u6838\u5BF9\u8BA2\u5355\u4FE1\u606F
 cart.check.receiver.information=\u6536\u8D27\u4EBA\u4FE1\u606F
+cart.check.zhifu=\u652F\u4ED8\u53CA\u914D\u9001\u65B9\u5F0F
+cart.check.fapiao=\u53D1\u7968\u4FE1\u606F
+cart.check.product.list=\u5546\u54C1\u6E05\u5355
