--- a/src/app_shop_zh_CN.properties
+++ b/src/app_shop_zh_CN.properties
@@ -80,3 +80,15 @@ cart.check.receiver.information=\u6536\u8D27\u4EBA\u4FE1\u606F
 cart.check.zhifu=\u652F\u4ED8\u53CA\u914D\u9001\u65B9\u5F0F
 cart.check.fapiao=\u53D1\u7968\u4FE1\u606F
 cart.check.product.list=\u5546\u54C1\u6E05\u5355
+
+# login
+login.user.login.title=\u6B22\u8FCE\u767B\u5F55
+login.user.sing.up=\u514D\u8D39\u6CE8\u518C
+login.user.name=\u7528\u6237\u540D
+login.user.password=\u5BC6\u7801
+login.user.confirm.password=\u786E\u8BA4\u5BC6\u7801
+login.keep.logining=\u4FDD\u6301\u767B\u5F55
+login.btn.login=\u767B\u5F55
+login.user.email=\u90AE\u7BB1\u5730\u5740
+login.user.mobile=\u624B\u673A\u53F7\u7801
+login.btn.sign.up=\u514D\u8D39\u6CE8\u518C
