--- a/src/app_shop_zh_CN.properties
+++ b/src/app_shop_zh_CN.properties
@@ -68,7 +68,7 @@ shop.footer.widget.policies.refund.policy=\u9000\u6B3E\u653F\u7B56
 shop.footer.widget.policies.billing.system=\u8BA1\u8D39\u7CFB\u7EDF
 shop.footer.widget.subscription=\u5173\u4E8E\u8BA2\u9605
 shop.footer.widget.subscription.info=\u53EA\u8981\u4E00\u4E2AE-mail\u5C31\u80FD\u4E13\u4EAB\u7CBE\u9009\u7279\u60E0
-shop.footer.bottom.copyright=© 2014 \u4F9D\u52E4\u5546\u57CE \u7248\u6743\u6240\u6709 .
+shop.footer.bottom.copyright=\u00A9 2014 \u4F9D\u52E4\u5546\u57CE \u7248\u6743\u6240\u6709 .
 
 # cart
 cart.item.product=\u5546\u54C1
@@ -77,7 +77,8 @@ cart.item.quantity=\u6570\u91CF
 cart.item.total=\u603B\u4EF7
 cart.check.title=\u586B\u5199\u5E76\u6838\u5BF9\u8BA2\u5355\u4FE1\u606F
 cart.check.receiver.information=\u6536\u8D27\u4EBA\u4FE1\u606F
-cart.check.zhifu=\u652F\u4ED8\u53CA\u914D\u9001\u65B9\u5F0F
+cart.check.zhifu=\u652F\u4ED8\u65B9\u5F0F
+cart.check.peisong=\u914D\u9001\u65B9\u5F0F
 cart.check.fapiao=\u53D1\u7968\u4FE1\u606F
 cart.check.product.list=\u5546\u54C1\u6E05\u5355
 
