--- a/src/app_sa_zh_CN.properties
+++ b/src/app_sa_zh_CN.properties
@@ -1,3 +1,5 @@
 sa.login.title=\u767B\u5F55\u4F9D\u52E4\u7BA1\u7406\u7CFB\u7EDF
 sa.login.lbl.sign.in=\u8BF7\u767B\u5F55\u4F9D\u52E4\u7BA1\u7406\u7CFB\u7EDF
 sa.login.btn.login=\u767B\u5F55
+
+sa.index.lbl.yiqin=\u4F9D\u52E4\u7BA1\u7406\u7CFB\u7EDF
