--- a/src/app_sa_zh_CN.properties
+++ b/src/app_sa_zh_CN.properties
@@ -2,4 +2,19 @@ sa.login.title=\u767B\u5F55\u4F9D\u52E4\u7BA1\u7406\u7CFB\u7EDF
 sa.login.lbl.sign.in=\u8BF7\u767B\u5F55\u4F9D\u52E4\u7BA1\u7406\u7CFB\u7EDF
 sa.login.btn.login=\u767B\u5F55
 
+sa.index.title=\u4F9D\u52E4\u7BA1\u7406\u7CFB\u7EDF
 sa.index.lbl.yiqin=\u4F9D\u52E4\u7BA1\u7406\u7CFB\u7EDF
+
+sa.header.logout=\u5B89\u5168\u9000\u51FA
+sa.header.order=\u8BA2\u5355\u7BA1\u7406
+sa.header.user=\u7528\u6237\u7BA1\u7406
+sa.header.user.sa=\u4FEE\u6539\u8D85\u7BA1\u5BC6\u7801
+sa.header.user.admin=\u7BA1\u7406\u5458\u7BA1\u7406
+sa.header.product=\u5546\u54C1\u7BA1\u7406
+sa.header.product.attribute=\u5C5E\u6027\u7BA1\u7406
+sa.header.product.item=\u5546\u54C1\u5185\u5BB9\u7BA1\u7406
+sa.header.quick.shopping=\u5FEB\u901F\u8D2D\u7269\u7BA1\u7406
+sa.header.inventory=\u8FDB\u9500\u5B58\u7BA1\u7406
+sa.header.inventory.info=\u5E93\u5B58\u4FE1\u606F
+sa.header.inventory.order.by.customer=\u6309\u5BA2\u6237\u6C47\u603B
+sa.header.inventory.all.orders=\u6C47\u603B
