--- a/src/app_sa_zh_CN.properties
+++ b/src/app_sa_zh_CN.properties
@@ -18,3 +18,5 @@ sa.header.inventory=\u8FDB\u9500\u5B58\u7BA1\u7406
 sa.header.inventory.info=\u5E93\u5B58\u4FE1\u606F
 sa.header.inventory.order.by.customer=\u6309\u5BA2\u6237\u6C47\u603B
 sa.header.inventory.all.orders=\u6C47\u603B
+
+sa.product.att.title=\u5C5E\u6027\u7BA1\u7406
