--- a/src/app_shop_zh_CN.properties
+++ b/src/app_shop_zh_CN.properties
@@ -65,7 +65,7 @@ shop.footer.widget.service.order.status=\u8BA2\u5355\u72B6\u6001
 shop.footer.widget.service.faq=\u5E38\u89C1\u95EE\u9898
 shop.footer.widget.policies=\u653F\u7B56
 shop.footer.widget.policies.terms.of.use=\u4F7F\u7528\u6761\u6B3E
-shop.footer.widget.policies.refund.policy=\u9000\u6B3E\u653F\u7B56
+shop.footer.widget.policies.refund.policy=\u9000\u6362\u8D27\u8BF4\u660E
 shop.footer.widget.policies.billing.system=\u8BA1\u8D39\u7CFB\u7EDF
 shop.footer.widget.subscription=\u5173\u4E8E\u8BA2\u9605
 shop.footer.widget.subscription.info=\u53EA\u8981\u4E00\u4E2AE-mail\u5C31\u80FD\u4E13\u4EAB\u7CBE\u9009\u7279\u60E0
