--- a/src/app_shop_zh_CN.properties
+++ b/src/app_shop_zh_CN.properties
@@ -5,7 +5,7 @@ shop.cart.title=\u4F9D\u52E4\u5546\u57CE - \u8D2D\u7269\u8F66
 
 # shop header
 yiqin.phone=138 1115 9799
-yiqin.mail=15989111@qq.com
+yiqin.mail=support@electte.com
 shop.header.top.accout=\u6211\u7684\u4F9D\u52E4
 shop.header.top.wishlist=\u6536\u85CF\u5939
 shop.header.top.quick.shopping=\u5FEB\u901F\u8D2D\u7269
