--- a/src/app_shop_zh_CN.properties
+++ b/src/app_shop_zh_CN.properties
@@ -57,6 +57,7 @@ shop.add.to.compare=\u52A0\u5165\u5BF9\u6BD4
 
 # shop footer
 shop.footer.widget.about.yiqin=\u5173\u4E8E\u4F9D\u52E4
+shop.footer.widget.yiqin.present=\u4F9D\u52E4\u4ECB\u7ECD
 shop.footer.widget.about.yiqin.info=\u4F9D\u52E4\u5546\u57CE\u662F\u5168\u7403\u6700\u5927\u7684\u529E\u516C\u7528\u54C1\u96F6\u552E\u548C\u5206\u9500\u5546\u4E4B\u4E00\u3002\u6211\u4EEC\u81F4\u529B\u4E8E\u4F7F\u5168\u7403\u5BA2\u6237\u90FD\u80FD\u66F4\u7B80\u5355\u5730\u91C7\u8D2D\u5230\u54C1\u7C7B\u9F50\u5168\u7684\u529E\u516C\u7528\u54C1\u3001\u529E\u516C\u8BBE\u5907\u3001\u529E\u516C\u5BB6\u5177\u548C\u5404\u7C7B\u5546\u52A1\u670D\u52A1\u3002
 shop.footer.widget.service=\u5BA2\u6237\u670D\u52A1
 shop.footer.widget.service.online.help=\u5E2E\u52A9\u4E2D\u5FC3
@@ -69,7 +70,7 @@ shop.footer.widget.policies.refund.policy=\u9000\u6362\u8D27\u8BF4\u660E
 shop.footer.widget.policies.billing.system=\u8BA1\u8D39\u7CFB\u7EDF
 shop.footer.widget.subscription=\u5173\u4E8E\u8BA2\u9605
 shop.footer.widget.subscription.info=\u53EA\u8981\u4E00\u4E2AE-mail\u5C31\u80FD\u4E13\u4EAB\u7CBE\u9009\u7279\u60E0
-shop.footer.bottom.copyright=\u00A9 2014 \u4F9D\u52E4\u5546\u57CE \u7248\u6743\u6240\u6709 .
+shop.footer.bottom.copyright=\u00A9 2014 \u4F9D\u52E4\u5546\u57CE \u7248\u6743\u6240\u6709 . \uFF08\u5317\u4EAC\u4F9D\u52E4\u5546\u8D38\u6709\u9650\u516C\u53F8  ELECTTE.COM\uFF09
 
 # cart
 cart.item.product=\u5546\u54C1
