add product details

--- a/src/app_shop_zh_CN.properties
+++ b/src/app_shop_zh_CN.properties
@@ -95,3 +95,8 @@ login.btn.login=\u767B\u5F55
 login.user.email=\u90AE\u7BB1\u5730\u5740
 login.user.mobile=\u624B\u673A\u53F7\u7801
 login.btn.sign.up=\u514D\u8D39\u6CE8\u518C
+shop.product.details.details=\u5546\u54C1\u4ECB\u7ECD
+shop.product.details.spe.parameters=\u89C4\u683C\u53C2\u6570
+shop.product.details.reviews=\u5546\u54C1\u8BC4\u4EF7
+shop.product.details.productId=\u5546\u54C1ID\uFF1A
+shop.product.details.color=\u989C\u8272\u9009\u62E9\uFF1A
