--- a/src/app_sa_zh_CN.properties
+++ b/src/app_sa_zh_CN.properties
@@ -19,10 +19,15 @@ sa.header.inventory.info=\u5E93\u5B58\u4FE1\u606F
 sa.header.inventory.order.by.customer=\u6309\u5BA2\u6237\u6C47\u603B
 sa.header.inventory.all.orders=\u6C47\u603B
 
+sa.btn.query=\u67E5\u8BE2
+sa.btn.upload=\u4E0A\u4F20
+sa.btn.save=\u4FDD\u5B58
+sa.btn.reset=\u91CD\u7F6E
+sa.btn.modify=\u4FEE\u6539
+
 sa.pd.attr.title=\u5C5E\u6027\u7BA1\u7406
 sa.pd.attr.lbl.select=\u9009\u62E9\u5206\u7C7B
-sa.pd.attr.btn.query=\u67E5\u8BE2
-sa.pd.attr.btn.upload=\u4E0A\u4F20
 sa.pd.attr.list.title=\u5C5E\u6027\u5217\u8868
 sa.pd.attr.btn.remove.all=\u5220\u9664\u6240\u6709\u5C5E\u6027
 sa.pd.attr.btn.add=\u8FFD\u52A0\u5C5E\u6027
+sa.pd.attr.lbl.add=\u65B0\u5C5E\u6027\u8FFD\u52A0
