--- a/src/msg_zh_CN.properties
+++ b/src/msg_zh_CN.properties
@@ -1,13 +1,18 @@
 msg.attr.remove=\u5220\u9664\u5C5E\u6027
 msg.attr.edit=\u4FEE\u6539\u5C5E\u6027
 msg.no.item=\u6682\u65E0{0}\u4FE1\u606F\uFF01
+msg.err.param=\u53C2\u6570\u6709\u8BEF\uFF01
+msg.suc.remove=\u5220\u9664\u6210\u529F\uFF01
+msg.err.db=\u6570\u636E\u5E93\u64CD\u4F5C\u6709\u8BEF\uFF0C\u8BF7\u91CD\u8BD5\uFF01
+msg.alert.remove.item=\u786E\u8BA4\u5220\u9664{0}\uFF1F
+msg.fail.do={0}\u5931\u8D25\uFF0C\u8BF7\u91CD\u8BD5\uFF01
+msg.suc.do={0}\u6210\u529F\uFF01
+
 msg.param.category=\u4EA7\u54C1\u5206\u7C7B
 msg.param.attribute=\u5C5E\u6027
 msg.param.all.attr=\u6240\u6709\u5C5E\u6027
 msg.param.attr.=\u5C5E\u6027\uFF1AattrName
-msg.err.param=\u53C2\u6570\u6709\u8BEF\uFF01
-msg.err.remove=\u5220\u9664\u5931\u8D25\uFF0C\u8BF7\u91CD\u8BD5\uFF01
-msg.suc.remove=\u5220\u9664\u6210\u529F\uFF01
-msg.err.db=\u6570\u636E\u5E93\u64CD\u4F5C\u6709\u8BEF\uFF0C\u8BF7\u91CD\u8BD5\uFF01
-msg.alert.remove.item=\u786E\u8BA4\u5220\u9664{0}\uFF1F
-msg.err.upload=\u4E0A\u4F20\u5931\u8D25\uFF0C\u8BF7\u91CD\u8BD5\uFF01
+msg.param.save=\u4FDD\u5B58
+msg.param.modify=\u4FEE\u6539
+msg.param.delete=\u5220\u9664
+msg.param.upload=\u4E0A\u4F20
