fix editAttr & add product

--- a/src/app_sa_zh_CN.properties
+++ b/src/app_sa_zh_CN.properties
@@ -25,9 +25,18 @@ sa.btn.save=\u4FDD\u5B58
 sa.btn.reset=\u91CD\u7F6E
 sa.btn.modify=\u4FEE\u6539
 
+sa.pd.lbl.select.category=\u9009\u62E9\u5206\u7C7B
+
 sa.pd.attr.title=\u5C5E\u6027\u7BA1\u7406
-sa.pd.attr.lbl.select=\u9009\u62E9\u5206\u7C7B
 sa.pd.attr.list.title=\u5C5E\u6027\u5217\u8868
 sa.pd.attr.btn.remove.all=\u5220\u9664\u6240\u6709\u5C5E\u6027
 sa.pd.attr.btn.add=\u8FFD\u52A0\u5C5E\u6027
 sa.pd.attr.lbl.add=\u65B0\u5C5E\u6027\u8FFD\u52A0
+sa.pd.attr.lbl.edit=\u5C5E\u6027\u4FEE\u6539
+
+sa.pd.item.title=\u5546\u54C1\u7BA1\u7406
+sa.pd.item.list.title=\u5546\u54C1\u5217\u8868
+sa.pd.item.btn.remove.all=\u5220\u9664\u6240\u6709\u5546\u54C1
+sa.pd.item.btn.add=\u8FFD\u52A0\u5546\u54C1
+sa.pd.item.lbl.add=\u65B0\u5546\u54C1\u8FFD\u52A0
+sa.pd.item.lbl.edit=\u5546\u54C1\u4FEE\u6539
