--- a/src/msg_zh_CN.properties
+++ b/src/msg_zh_CN.properties
@@ -8,11 +8,18 @@ msg.alert.remove.item=\u786E\u8BA4\u5220\u9664{0}\uFF1F
 msg.fail.do={0}\u5931\u8D25\uFF0C\u8BF7\u91CD\u8BD5\uFF01
 msg.suc.do={0}\u6210\u529F\uFF01
 
-msg.param.category=\u4EA7\u54C1\u5206\u7C7B
+msg.pro.remove=\u5220\u9664\u5546\u54C1
+msg.pro.edit=\u4FEE\u6539\u5546\u54C1
+
+msg.param.category=\u4EA7\u54C1\u5C5E\u6027
 msg.param.attribute=\u5C5E\u6027
 msg.param.all.attr=\u6240\u6709\u5C5E\u6027
 msg.param.attr.=\u5C5E\u6027\uFF1AattrName
+msg.param.item=\u5546\u54C1
+msg.param.all.item=\u6240\u6709\u5546\u54C1
+msg.param.item.=\u5546\u54C1\uFF1A
 msg.param.save=\u4FDD\u5B58
 msg.param.modify=\u4FEE\u6539
 msg.param.delete=\u5220\u9664
 msg.param.upload=\u4E0A\u4F20
+msg.param.query=\u67E5\u8BE2
