--- a/src/msg_zh_CN.properties
+++ b/src/msg_zh_CN.properties
@@ -17,7 +17,7 @@ msg.param.all.attr=\u6240\u6709\u5C5E\u6027
 msg.param.attr.=\u5C5E\u6027\uFF1AattrName
 msg.param.item=\u5546\u54C1
 msg.param.all.item=\u6240\u6709\u5546\u54C1
-msg.param.item.=\u5546\u54C1\uFF1A
+msg.param.item.=\u5546\u54C1\uFF1AitemName
 msg.param.save=\u4FDD\u5B58
 msg.param.modify=\u4FEE\u6539
 msg.param.delete=\u5220\u9664
