fix addItem, removeAllItem

--- a/src/msg_zh_CN.properties
+++ b/src/msg_zh_CN.properties
@@ -7,6 +7,7 @@ msg.err.db=\u6570\u636E\u5E93\u64CD\u4F5C\u6709\u8BEF\uFF0C\u8BF7\u91CD\u8BD5\uF
 msg.alert.remove.item=\u786E\u8BA4\u5220\u9664{0}\uFF1F
 msg.fail.do={0}\u5931\u8D25\uFF0C\u8BF7\u91CD\u8BD5\uFF01
 msg.suc.do={0}\u6210\u529F\uFF01
+msg.err.wrong.product.id=\u8BF7\u8F93\u5165\u6B63\u786E\u7684 Product ID
 
 msg.pro.remove=\u5220\u9664\u5546\u54C1
 msg.pro.edit=\u4FEE\u6539\u5546\u54C1
