add best product

--- a/src/app_sa_zh_CN.properties
+++ b/src/app_sa_zh_CN.properties
@@ -42,3 +42,5 @@ sa.pd.item.btn.remove.all=\u5220\u9664\u6240\u6709\u5546\u54C1
 sa.pd.item.btn.add=\u8FFD\u52A0\u5546\u54C1
 sa.pd.item.lbl.add=\u65B0\u5546\u54C1\u8FFD\u52A0
 sa.pd.item.lbl.edit=\u5546\u54C1\u4FEE\u6539
+
+sa.best.pd.title=\u5FEB\u901F\u8D2D\u7269\u7BA1\u7406
