add user list in best product

--- a/src/app_sa_zh_CN.properties
+++ b/src/app_sa_zh_CN.properties
@@ -28,6 +28,7 @@ sa.btn.reset=\u91CD\u7F6E
 sa.btn.modify=\u4FEE\u6539
 
 sa.pd.lbl.select.category=\u9009\u62E9\u5206\u7C7B
+sa.pd.lbl.select.user=\u9009\u62E9\u7528\u6237
 
 sa.pd.attr.title=\u5C5E\u6027\u7BA1\u7406
 sa.pd.attr.list.title=\u5C5E\u6027\u5217\u8868
@@ -44,3 +45,4 @@ sa.pd.item.lbl.add=\u65B0\u5546\u54C1\u8FFD\u52A0
 sa.pd.item.lbl.edit=\u5546\u54C1\u4FEE\u6539
 
 sa.best.pd.title=\u5FEB\u901F\u8D2D\u7269\u7BA1\u7406
+sa.best.pd.list.title=\u5546\u54C1\u5217\u8868
