--- a/src/msg_zh_CN.properties
+++ b/src/msg_zh_CN.properties
@@ -24,3 +24,4 @@ msg.param.modify=\u4FEE\u6539
 msg.param.delete=\u5220\u9664
 msg.param.upload=\u4E0A\u4F20
 msg.param.query=\u67E5\u8BE2
+msg.param.user=\u7528\u6237
