--- a/src/app_sa_zh_CN.properties
+++ b/src/app_sa_zh_CN.properties
@@ -45,4 +45,4 @@ sa.pd.item.lbl.add=\u65B0\u5546\u54C1\u8FFD\u52A0
 sa.pd.item.lbl.edit=\u5546\u54C1\u4FEE\u6539
 
 sa.best.pd.title=\u5FEB\u901F\u8D2D\u7269\u7BA1\u7406
-sa.best.pd.list.title=\u5546\u54C1\u5217\u8868
+sa.best.pd.list.title=\u5FEB\u901F\u8D2D\u7269\u5217\u8868
