--- a/src/msg_zh_CN.properties
+++ b/src/msg_zh_CN.properties
@@ -26,3 +26,5 @@ msg.param.upload=\u4E0A\u4F20
 msg.param.query=\u67E5\u8BE2
 msg.param.user=\u7528\u6237
 msg.param.best.product=\u5FEB\u901F\u8D2D\u7269
+msg.param.bd.category.=\u5206\u7C7B\uFF1ACategoryName \u4E0B\u7684\u5546\u54C1\u6E05\u5355
+msg.param.bd.all.item=\u6240\u6709\u5206\u7C7B\u4E0B\u5546\u54C1\u6E05\u5355
