add modify sa user

--- a/src/app_sa_zh_CN.properties
+++ b/src/app_sa_zh_CN.properties
@@ -10,7 +10,7 @@ sa.header.logout=\u5B89\u5168\u9000\u51FA
 sa.header.order=\u8BA2\u5355\u7BA1\u7406
 sa.header.order.detail=\u8BA2\u5355\u660E\u7EC6\u7BA1\u7406
 sa.header.user=\u7528\u6237\u7BA1\u7406
-sa.header.user.sa=\u4FEE\u6539\u8D85\u7BA1\u5BC6\u7801
+sa.header.user.sa=\u8D85\u7EA7\u7BA1\u7406\u5458\u7BA1\u7406
 sa.header.user.admin=\u7BA1\u7406\u5458\u7BA1\u7406
 sa.header.product=\u5546\u54C1\u7BA1\u7406
 sa.header.product.attribute=\u5C5E\u6027\u7BA1\u7406
@@ -20,6 +20,13 @@ sa.header.inventory=\u8FDB\u9500\u5B58\u7BA1\u7406
 sa.header.inventory.info=\u5E93\u5B58\u4FE1\u606F
 sa.header.inventory.order.by.customer=\u6309\u5BA2\u6237\u6C47\u603B
 sa.header.inventory.all.orders=\u6C47\u603B
+
+sa.user.lbl.sa=\u4FEE\u6539\u8D85\u7BA1\u5BC6\u7801
+sa.user.lbl.old.password=\u539F\u5BC6\u7801
+sa.user.lbl.new.password=\u65B0\u5BC6\u7801
+sa.user.lbl.confirm.new.password=\u786E\u8BA4\u65B0\u5BC6\u7801
+sa.user.lbl.pass=4-8\u4F4D\u82F1\u6587\u3001\u6570\u5B57\uFF0C\u82F1\u6587\u533A\u5206\u5927\u5C0F\u5199
+sa.user.lbl.confirm.pass=\u518D\u6B21\u8F93\u5165\u65B0\u5BC6\u7801
 
 sa.btn.query=\u67E5\u8BE2
 sa.btn.upload=\u4E0A\u4F20
