--- a/src/msg_zh_CN.properties
+++ b/src/msg_zh_CN.properties
@@ -8,6 +8,10 @@ msg.alert.remove.item=\u786E\u8BA4\u5220\u9664{0}\uFF1F
 msg.fail.do={0}\u5931\u8D25\uFF0C\u8BF7\u91CD\u8BD5\uFF01
 msg.suc.do={0}\u6210\u529F\uFF01
 msg.err.wrong.product.id=\u8BF7\u8F93\u5165\u6B63\u786E\u7684 Product ID
+msg.err.old.pass=\u539F\u5BC6\u7801\u9519\u8BEF\uFF0C\u8BF7\u91CD\u8BD5\uFF01
+msg.no.pass=\u5BC6\u7801\u4E0D\u80FD\u4E3A\u7A7A
+msg.err.confirm.pass=\u65B0\u5BC6\u7801\u4E0E\u786E\u8BA4\u5BC6\u7801\u4E0D\u540C\uFF0C\u8BF7\u91CD\u65B0\u586B\u5199\uFF01
+msg.err.format.pass=\u65B0\u5BC6\u7801\u683C\u5F0F\u4E0D\u6B63\u786E\uFF0C\u8BF7\u91CD\u65B0\u8F93\u5165\uFF01
 
 msg.pro.remove=\u5220\u9664\u5546\u54C1
 msg.pro.edit=\u4FEE\u6539\u5546\u54C1
