add create admin

--- a/src/app_sa_zh_CN.properties
+++ b/src/app_sa_zh_CN.properties
@@ -25,8 +25,17 @@ sa.user.lbl.sa=\u4FEE\u6539\u8D85\u7BA1\u5BC6\u7801
 sa.user.lbl.old.password=\u539F\u5BC6\u7801
 sa.user.lbl.new.password=\u65B0\u5BC6\u7801
 sa.user.lbl.confirm.new.password=\u786E\u8BA4\u65B0\u5BC6\u7801
+sa.user.lbl.password=\u5BC6\u7801
+sa.user.lbl.confirm.password=\u786E\u8BA4\u5BC6\u7801
 sa.user.lbl.pass=4-8\u4F4D\u82F1\u6587\u3001\u6570\u5B57\uFF0C\u82F1\u6587\u533A\u5206\u5927\u5C0F\u5199
 sa.user.lbl.confirm.pass=\u518D\u6B21\u8F93\u5165\u65B0\u5BC6\u7801
+sa.user.lbl.user.id=\u7528\u6237 ID
+sa.user.lbl.userId=4-8\u4F4D\u82F1\u6587\u3001\u6570\u5B57\u3001\u4E0B\u5212\u7EBF\u3001\u4E2D\u6A2A\u7EBF\uFF0C\u82F1\u6587\u533A\u5206\u5927\u5C0F\u5199
+sa.user.lbl.user.name=\u7528\u6237\u540D
+sa.user.lbl.userName=\u6700\u591A20\u4E2A\u5B57\u7B26\uFF0810\u4E2A\u6C49\u5B57\uFF09
+sa.user.lbl.admin.list=\u7BA1\u7406\u5458\u5217\u8868
+sa.user.lbl.create.admin=\u521B\u5EFA\u7BA1\u7406\u5458
+sa.user.lbl.edit.admin=\u7F16\u8F91\u7BA1\u7406\u5458
 
 sa.btn.query=\u67E5\u8BE2
 sa.btn.upload=\u4E0A\u4F20
