--- a/src/msg_zh_CN.properties
+++ b/src/msg_zh_CN.properties
@@ -12,10 +12,18 @@ msg.err.old.pass=\u539F\u5BC6\u7801\u9519\u8BEF\uFF0C\u8BF7\u91CD\u8BD5\uFF01
 msg.no.pass=\u5BC6\u7801\u4E0D\u80FD\u4E3A\u7A7A
 msg.err.confirm.pass=\u65B0\u5BC6\u7801\u4E0E\u786E\u8BA4\u5BC6\u7801\u4E0D\u540C\uFF0C\u8BF7\u91CD\u65B0\u586B\u5199\uFF01
 msg.err.format.pass=\u65B0\u5BC6\u7801\u683C\u5F0F\u4E0D\u6B63\u786E\uFF0C\u8BF7\u91CD\u65B0\u8F93\u5165\uFF01
+msg.admin.edit=\u7F16\u8F91\u7BA1\u7406\u5458
+msg.admin.remove=\u5220\u9664\u7BA1\u7406\u5458
+msg.err.item={0}\u6709\u8BEF\uFF0C\u8BF7\u91CD\u65B0\u8F93\u5165
+msg.err.blank={0}\u4E3A\u5FC5\u586B\u9879
+msg.err.pass.confirm=\u786E\u8BA4\u5BC6\u7801\u9700\u4E0E\u5BC6\u7801\u4E00\u81F4
 
 msg.pro.remove=\u5220\u9664\u5546\u54C1
 msg.pro.edit=\u4FEE\u6539\u5546\u54C1
 
+msg.param.id=ID
+msg.param.name=\u540D\u79F0
+msg.param.pass=\u5BC6\u7801
 msg.param.category=\u4EA7\u54C1\u5C5E\u6027
 msg.param.attribute=\u5C5E\u6027
 msg.param.all.attr=\u6240\u6709\u5C5E\u6027
@@ -32,3 +40,4 @@ msg.param.user=\u7528\u6237
 msg.param.best.product=\u5FEB\u901F\u8D2D\u7269
 msg.param.bd.category.=\u5206\u7C7B\uFF1ACategoryName \u4E0B\u7684\u5546\u54C1\u6E05\u5355
 msg.param.bd.all.item=\u6240\u6709\u5206\u7C7B\u4E0B\u5546\u54C1\u6E05\u5355
+msg.param.admin=\u7BA1\u7406\u5458
