--- a/src/app_shop_zh_CN.properties
+++ b/src/app_shop_zh_CN.properties
@@ -11,7 +11,8 @@ shop.header.top.wishlist=\u6536\u85CF\u5939
 shop.header.top.quick.shopping=\u5FEB\u901F\u8D2D\u7269
 shop.header.top.order.shopping=\u6211\u7684\u8BA2\u5355
 shop.header.top.cart=\u8D2D\u7269\u8F66
-shop.header.top.login=\u8BF7\u767B\u5F55 | \u514D\u8D39\u6CE8\u518C
+shop.header.top.register=\u514D\u8D39\u6CE8\u518C
+shop.header.top.login=\u8BF7\u767B\u5F55
 shop.header.top.logout=\u5B89\u5168\u9000\u51FA
 shop.header.nav.search=\u641C\u7D22
 shop.header.nav.home=\u9996\u9875
@@ -55,6 +56,8 @@ shop.add.to.cart=\u52A0\u5165\u8D2D\u7269\u8F66
 shop.add.to.wishlist=\u6536\u85CF
 shop.add.to.compare=\u52A0\u5165\u5BF9\u6BD4
 
+shop.product.label.yuan.price=\u539F\u4EF7
+shop.product.label.zhekou.price=\u6298\u6263\u4EF7
 # shop footer
 shop.footer.widget.about.yiqin=\u5173\u4E8E\u4F9D\u52E4
 shop.footer.widget.yiqin.present=\u4F9D\u52E4\u4ECB\u7ECD
