--- a/src/app_sa_zh_CN.properties
+++ b/src/app_sa_zh_CN.properties
@@ -20,6 +20,7 @@ sa.header.inventory=\u8FDB\u9500\u5B58\u7BA1\u7406
 sa.header.inventory.info=\u5E93\u5B58\u4FE1\u606F
 sa.header.inventory.order.by.customer=\u6309\u5BA2\u6237\u6C47\u603B
 sa.header.inventory.all.orders=\u6C47\u603B
+sa.header.customer.manage=\u5BA2\u6237\u7BA1\u7406
 
 sa.user.lbl.sa=\u4FEE\u6539\u8D85\u7BA1\u5BC6\u7801
 sa.user.lbl.old.password=\u539F\u5BC6\u7801
@@ -36,6 +37,7 @@ sa.user.lbl.userName=\u6700\u591A20\u4E2A\u5B57\u7B26\uFF0810\u4E2A\u6C49\u5B57\
 sa.user.lbl.admin.list=\u7BA1\u7406\u5458\u5217\u8868
 sa.user.lbl.create.admin=\u521B\u5EFA\u7BA1\u7406\u5458
 sa.user.lbl.edit.admin=\u7F16\u8F91\u7BA1\u7406\u5458
+sa.customer.zhekou=\u7528\u6237\u6298\u6263
 
 sa.btn.query=\u67E5\u8BE2
 sa.btn.upload=\u4E0A\u4F20
