--- a/src/app_shop_zh_CN.properties
+++ b/src/app_shop_zh_CN.properties
@@ -57,7 +57,7 @@ shop.add.to.wishlist=\u6536\u85CF
 shop.add.to.compare=\u52A0\u5165\u5BF9\u6BD4
 
 shop.product.label.yuan.price=\u539F\u4EF7
-shop.product.label.zhekou.price=\u6298\u6263\u4EF7
+shop.product.label.zhekou=\u6298\u6263
 # shop footer
 shop.footer.widget.about.yiqin=\u5173\u4E8E\u4F9D\u52E4
 shop.footer.widget.yiqin.present=\u4F9D\u52E4\u4ECB\u7ECD
