--- a/src/app_shop_zh_CN.properties
+++ b/src/app_shop_zh_CN.properties
@@ -1,7 +1,8 @@
 # shop title
-shop.index.title=\u4F9D\u52E4\u5546\u57CE\u6B22\u8FCE\u60A8
+shop.index.title=\u4F9D\u52E4\u529E\u516C\u6B22\u8FCE\u60A8
 shop.login.title=\u767B\u5F55\u4F9D\u52E4
-shop.cart.title=\u4F9D\u52E4\u5546\u57CE - \u8D2D\u7269\u8F66
+shop.cart.title=\u4F9D\u52E4\u529E\u516C - \u8D2D\u7269\u8F66
+shop.center.title=\u4F9D\u52E4\u529E\u516C - \u6211\u7684\u4F9D\u52E4
 
 # shop header
 yiqin.phone=138 1115 9799
@@ -61,7 +62,7 @@ shop.product.label.zhekou=\u6298\u6263
 # shop footer
 shop.footer.widget.about.yiqin=\u5173\u4E8E\u4F9D\u52E4
 shop.footer.widget.yiqin.present=\u4F9D\u52E4\u4ECB\u7ECD
-shop.footer.widget.about.yiqin.info=\u4F9D\u52E4\u5546\u57CE\u662F\u5168\u7403\u6700\u5927\u7684\u529E\u516C\u7528\u54C1\u96F6\u552E\u548C\u5206\u9500\u5546\u4E4B\u4E00\u3002\u6211\u4EEC\u81F4\u529B\u4E8E\u4F7F\u5168\u7403\u5BA2\u6237\u90FD\u80FD\u66F4\u7B80\u5355\u5730\u91C7\u8D2D\u5230\u54C1\u7C7B\u9F50\u5168\u7684\u529E\u516C\u7528\u54C1\u3001\u529E\u516C\u8BBE\u5907\u3001\u529E\u516C\u5BB6\u5177\u548C\u5404\u7C7B\u5546\u52A1\u670D\u52A1\u3002
+shop.footer.widget.about.yiqin.info=\u4F9D\u52E4\uFF08ELECTTE\uFF09\u521B\u7ACB\u4E8E2015\u5E745\u67081\u65E5\uFF0C\u96B6\u5C5E\u4E8E\u5317\u4EAC\u4F9D\u52E4\u5546\u8D38\u6709\u9650\u516C\u53F8\uFF08\u4EE5\u4E0B\u7B80\u79F0\uFF1A\u5317\u4EAC\u4F9D\u52E4\uFF09\uFF0C\u662F\u4E00\u5BB6\u81F4\u529B\u4E8E\u4F01\u4E1A\u529E\u516C\u7684\u7F51\u7AD9\uFF0C\u901A\u8FC7\u4E3A\u4F01\u4E1A\u63D0\u4F9B\u4E00\u7AD9\u5F0F\u529E\u516C\u91C7\u8D2D\u670D\u52A1\u3002
 shop.footer.widget.service=\u5BA2\u6237\u670D\u52A1
 shop.footer.widget.service.online.help=\u5E2E\u52A9\u4E2D\u5FC3
 shop.footer.widget.service.contact.us=\u8054\u7CFB\u6211\u4EEC
@@ -73,7 +74,7 @@ shop.footer.widget.policies.refund.policy=\u9000\u6362\u8D27\u8BF4\u660E
 shop.footer.widget.policies.billing.system=\u8BA1\u8D39\u7CFB\u7EDF
 shop.footer.widget.subscription=\u5173\u4E8E\u8BA2\u9605
 shop.footer.widget.subscription.info=\u53EA\u8981\u4E00\u4E2AE-mail\u5C31\u80FD\u4E13\u4EAB\u7CBE\u9009\u7279\u60E0
-shop.footer.bottom.copyright=\u00A9 2014 \u4F9D\u52E4\u5546\u57CE \u7248\u6743\u6240\u6709 . \uFF08\u5317\u4EAC\u4F9D\u52E4\u5546\u8D38\u6709\u9650\u516C\u53F8  ELECTTE.COM\uFF09
+shop.footer.bottom.copyright=\u00A9 2014 \u4F9D\u52E4\u529E\u516C \u7248\u6743\u6240\u6709 . \uFF08\u5317\u4EAC\u4F9D\u52E4\u5546\u8D38\u6709\u9650\u516C\u53F8  ELECTTE.COM\uFF09
 
 # cart
 cart.item.product=\u5546\u54C1
