--- a/src/app_sa_zh_CN.properties
+++ b/src/app_sa_zh_CN.properties
@@ -22,7 +22,7 @@ sa.header.inventory.order.by.customer=\u6309\u5BA2\u6237\u6C47\u603B
 sa.header.inventory.all.orders=\u6C47\u603B
 sa.header.customer.manage=\u5BA2\u6237\u7BA1\u7406
 
-sa.user.lbl.sa=\u4FEE\u6539\u8D85\u7BA1\u5BC6\u7801
+sa.user.lbl.sa=\u4FEE\u6539\u5BC6\u7801
 sa.user.lbl.old.password=\u539F\u5BC6\u7801
 sa.user.lbl.new.password=\u65B0\u5BC6\u7801
 sa.user.lbl.confirm.new.password=\u786E\u8BA4\u65B0\u5BC6\u7801
@@ -64,3 +64,6 @@ sa.pd.item.lbl.edit=\u5546\u54C1\u4FEE\u6539
 
 sa.best.pd.title=\u5FEB\u901F\u8D2D\u7269\u7BA1\u7406
 sa.best.pd.list.title=\u5FEB\u901F\u8D2D\u7269\u5217\u8868
+
+sa.role.200=11000,12000,12100,12200,12300,12301,13000,13100,13101,13102,13103,13104,13200,13201,13202,13203,13204,14000
+sa.role.100=11000,12000,12300,12301,12400
