--- a/src/app_shop_zh_CN.properties
+++ b/src/app_shop_zh_CN.properties
@@ -74,7 +74,8 @@ shop.footer.widget.policies.refund.policy=\u9000\u6362\u8D27\u8BF4\u660E
 shop.footer.widget.policies.billing.system=\u8BA1\u8D39\u7CFB\u7EDF
 shop.footer.widget.subscription=\u5173\u4E8E\u8BA2\u9605
 shop.footer.widget.subscription.info=\u53EA\u8981\u4E00\u4E2AE-mail\u5C31\u80FD\u4E13\u4EAB\u7CBE\u9009\u7279\u60E0
-shop.footer.bottom.copyright=\u00A9 2014 \u4F9D\u52E4\u529E\u516C \u7248\u6743\u6240\u6709 . \uFF08\u5317\u4EAC\u4F9D\u52E4\u5546\u8D38\u6709\u9650\u516C\u53F8  ELECTTE.COM\uFF09
+shop.footer.bottom.copyright=Copyright \u00A9 2014-2015 \u4F9D\u52E4\u529E\u516C ELECTTE.COM \u7248\u6743\u6240\u6709 .
+yiqin.record=\u4EACICP\u590715013259\u53F7-1
 
 # cart
 cart.item.product=\u5546\u54C1
