--- a/src/app_shop_zh_CN.properties
+++ b/src/app_shop_zh_CN.properties
@@ -62,7 +62,7 @@ shop.product.label.zhekou=\u6298\u6263
 # shop footer
 shop.footer.widget.about.yiqin=\u5173\u4E8E\u4F9D\u52E4
 shop.footer.widget.yiqin.present=\u4F9D\u52E4\u4ECB\u7ECD
-shop.footer.widget.about.yiqin.info=\u4F9D\u52E4\uFF08ELECTTE\uFF09\u521B\u7ACB\u4E8E2015\u5E745\u67081\u65E5\uFF0C\u96B6\u5C5E\u4E8E\u5317\u4EAC\u4F9D\u52E4\u5546\u8D38\u6709\u9650\u516C\u53F8\uFF08\u4EE5\u4E0B\u7B80\u79F0\uFF1A\u5317\u4EAC\u4F9D\u52E4\uFF09\uFF0C\u662F\u4E00\u5BB6\u81F4\u529B\u4E8E\u4F01\u4E1A\u529E\u516C\u7684\u7F51\u7AD9\uFF0C\u901A\u8FC7\u4E3A\u4F01\u4E1A\u63D0\u4F9B\u4E00\u7AD9\u5F0F\u529E\u516C\u91C7\u8D2D\u670D\u52A1\u3002
+shop.footer.widget.about.yiqin.info=\u4F9D\u52E4\u529E\u516C\uFF08ELECTTE.COM\uFF09\u521B\u7ACB\u4E8E2015\u5E745\u67081\u65E5\uFF0C\u662F\u4E00\u5BB6\u81F4\u529B\u4E8E\u4F01\u4E1A\u529E\u516C\u7684\u7F51\u7AD9\uFF0C\u4E3A\u4F01\u4E1A\u63D0\u4F9B\u4E00\u7AD9\u5F0F\u529E\u516C\u8BBE\u5907\u53CA\u7528\u54C1\u7684\u91C7\u8D2D\u670D\u52A1\u3002
 shop.footer.widget.service=\u5BA2\u6237\u670D\u52A1
 shop.footer.widget.service.online.help=\u5E2E\u52A9\u4E2D\u5FC3
 shop.footer.widget.service.contact.us=\u8054\u7CFB\u6211\u4EEC
