--- a/src/app_shop_zh_CN.properties
+++ b/src/app_shop_zh_CN.properties
@@ -1,8 +1,8 @@
 # shop title
-shop.index.title=\u4F9D\u52E4\u529E\u516C\u6B22\u8FCE\u60A8
-shop.login.title=\u767B\u5F55\u4F9D\u52E4
-shop.cart.title=\u4F9D\u52E4\u529E\u516C - \u8D2D\u7269\u8F66
-shop.center.title=\u4F9D\u52E4\u529E\u516C - \u6211\u7684\u4F9D\u52E4
+shop.index.title=\u4F9D\u52E4 - \u4F01\u4E1A\u529E\u516C\u7528\u54C1\u4E00\u7AD9\u5F0F\u91C7\u8D2D\u670D\u52A1
+shop.login.title=\u767B\u5F55 \u4F9D\u52E4
+shop.cart.title=\u4F9D\u52E4 - \u8D2D\u7269\u8F66
+shop.center.title=\u4F9D\u52E4 - \u6211\u7684\u4F9D\u52E4
 
 # shop header
 yiqin.phone=138 1115 9799
