--- a/src/app_shop_zh_CN.properties
+++ b/src/app_shop_zh_CN.properties
@@ -87,6 +87,7 @@ cart.check.receiver.information=\u6536\u8D27\u4EBA\u4FE1\u606F
 cart.check.zhifu=\u652F\u4ED8\u65B9\u5F0F
 cart.check.peisong=\u914D\u9001\u65B9\u5F0F
 cart.check.fapiao=\u53D1\u7968\u4FE1\u606F
+cart.check.ordernote=\u8BA2\u5355\u5907\u6CE8
 cart.check.product.list=\u5546\u54C1\u6E05\u5355
 
 # login
