--- a/src/app_sa_zh_CN.properties
+++ b/src/app_sa_zh_CN.properties
@@ -38,6 +38,7 @@ sa.user.lbl.admin.list=\u7BA1\u7406\u5458\u5217\u8868
 sa.user.lbl.create.admin=\u521B\u5EFA\u7BA1\u7406\u5458
 sa.user.lbl.edit.admin=\u7F16\u8F91\u7BA1\u7406\u5458
 sa.customer.zhekou=\u7528\u6237\u6298\u6263
+sa.customer.youhui=\u4F18\u60E0\u653F\u7B56
 
 sa.btn.query=\u67E5\u8BE2
 sa.btn.upload=\u4E0A\u4F20
