--- a/src/app_sa_zh_CN.properties
+++ b/src/app_sa_zh_CN.properties
@@ -13,6 +13,7 @@ sa.header.user=\u7528\u6237\u7BA1\u7406
 sa.header.user.sa=\u8D85\u7EA7\u7BA1\u7406\u5458\u7BA1\u7406
 sa.header.user.admin=\u7BA1\u7406\u5458\u7BA1\u7406
 sa.header.product=\u5546\u54C1\u7BA1\u7406
+sa.header.product.brand=\u54C1\u724C\u7BA1\u7406
 sa.header.product.attribute=\u5C5E\u6027\u7BA1\u7406
 sa.header.product.item=\u5546\u54C1\u5185\u5BB9\u7BA1\u7406
 sa.header.quick.shopping=\u5FEB\u901F\u8D2D\u7269\u7BA1\u7406
@@ -49,6 +50,12 @@ sa.btn.modify=\u4FEE\u6539
 sa.pd.lbl.select.category=\u9009\u62E9\u5206\u7C7B
 sa.pd.lbl.select.user=\u9009\u62E9\u7528\u6237
 
+sa.pd.brand.title=\u54C1\u724C\u7BA1\u7406
+sa.pd.brand.list.title=\u54C1\u724C\u5217\u8868
+sa.pd.brand.btn.add=\u8FFD\u52A0\u54C1\u724C
+sa.pd.brand.lbl.add=\u65B0\u54C1\u724C\u8FFD\u52A0
+sa.pd.brand.lbl.edit=\u54C1\u724C\u4FEE\u6539
+
 sa.pd.attr.title=\u5C5E\u6027\u7BA1\u7406
 sa.pd.attr.list.title=\u5C5E\u6027\u5217\u8868
 sa.pd.attr.btn.remove.all=\u5220\u9664\u6240\u6709\u5C5E\u6027
@@ -66,5 +73,6 @@ sa.pd.item.lbl.edit=\u5546\u54C1\u4FEE\u6539
 sa.best.pd.title=\u5FEB\u901F\u8D2D\u7269\u7BA1\u7406
 sa.best.pd.list.title=\u5FEB\u901F\u8D2D\u7269\u5217\u8868
 
-sa.role.200=11000,12000,12100,12200,12300,12301,13000,13100,13101,13102,13103,13104,13200,13201,13202,13203,13204,14000
+#sa.role.200=11000,12000,12100,12200,12300,12301,13000,13100,13101,13102,13103,13104,13200,13201,13202,13203,13204,13300,13302,13303,13304,14000
+sa.role.200=11000,12000,12100,12200,12300,12301,13000,13100,13101,13102,13103,13104,13200,13201,13202,13203,13204,13302,13303,13304,14000
 sa.role.100=11000,12000,12300,12301,12400
