--- a/src/msg_zh_CN.properties
+++ b/src/msg_zh_CN.properties
@@ -1,5 +1,7 @@
 msg.attr.remove=\u5220\u9664\u5C5E\u6027
 msg.attr.edit=\u4FEE\u6539\u5C5E\u6027
+msg.brand.remove=\u5220\u9664\u54C1\u724C
+msg.brand.edit=\u4FEE\u6539\u54C1\u724C
 msg.no.item=\u6682\u65E0{0}\u4FE1\u606F\uFF01
 msg.err.param=\u53C2\u6570\u6709\u8BEF\uFF01
 msg.suc.remove=\u5220\u9664\u6210\u529F\uFF01
