--- a/src/msg_zh_CN.properties
+++ b/src/msg_zh_CN.properties
@@ -26,6 +26,7 @@ msg.pro.edit=\u4FEE\u6539\u5546\u54C1
 msg.param.id=ID
 msg.param.name=\u540D\u79F0
 msg.param.pass=\u5BC6\u7801
+msg.param.brand=\u54C1\u724C
 msg.param.category=\u4EA7\u54C1\u5C5E\u6027
 msg.param.attribute=\u5C5E\u6027
 msg.param.all.attr=\u6240\u6709\u5C5E\u6027
