update zhekou info

--- a/src/app_shop_zh_CN.properties
+++ b/src/app_shop_zh_CN.properties
@@ -76,6 +76,7 @@ shop.footer.widget.subscription=\u5173\u4E8E\u8BA2\u9605
 shop.footer.widget.subscription.info=\u53EA\u8981\u4E00\u4E2AE-mail\u5C31\u80FD\u4E13\u4EAB\u7CBE\u9009\u7279\u60E0
 shop.footer.bottom.copyright=Copyright \u00A9 2014-2015 \u4F9D\u52E4\u529E\u516C ELECTTE.COM \u7248\u6743\u6240\u6709 .
 yiqin.record=\u4EACICP\u590715013259\u53F7-1
+shop.product.list.zhekou.info=\u767B\u5F55\u540E\u663E\u793A\u6298\u6263\u4EF7
 
 # cart
 cart.item.product=\u5546\u54C1
