add productId shop

--- a/src/app_shop_zh_CN.properties
+++ b/src/app_shop_zh_CN.properties
@@ -10,6 +10,7 @@ yiqin.mail=support@electte.com
 shop.header.top.accout=\u6211\u7684\u4F9D\u52E4
 shop.header.top.wishlist=\u6536\u85CF\u5939
 shop.header.top.quick.shopping=\u5FEB\u901F\u8D2D\u7269
+shop.header.top.code.shopping=\u7F16\u7801\u4E0B\u5355
 shop.header.top.order.shopping=\u6211\u7684\u8BA2\u5355
 shop.header.top.cart=\u8D2D\u7269\u8F66
 shop.header.top.register=\u514D\u8D39\u6CE8\u518C
