--- a/src/app_sa_zh_CN.properties
+++ b/src/app_sa_zh_CN.properties
@@ -8,6 +8,7 @@ sa.index.welcome=\u6B22\u8FCE\u4F7F\u7528\u4F9D\u52E4\u540E\u53F0\u7BA1\u7406\u7
 
 sa.header.logout=\u5B89\u5168\u9000\u51FA
 sa.header.order=\u8BA2\u5355\u7BA1\u7406
+sa.header.register.code=\u751F\u6210\u9080\u8BF7\u7801
 sa.header.order.detail=\u8BA2\u5355\u660E\u7EC6\u7BA1\u7406
 sa.header.user=\u7528\u6237\u7BA1\u7406
 sa.header.user.sa=\u8D85\u7EA7\u7BA1\u7406\u5458\u7BA1\u7406
