--- a/src/app_shop_zh_CN.properties
+++ b/src/app_shop_zh_CN.properties
@@ -101,6 +101,7 @@ login.user.confirm.password=\u786E\u8BA4\u5BC6\u7801
 login.keep.logining=\u4FDD\u6301\u767B\u5F55
 login.btn.login=\u767B\u5F55
 login.user.email=\u90AE\u7BB1\u5730\u5740
+login.user.reg.code=\u9080\u8BF7\u7801
 login.user.mobile=\u624B\u673A\u53F7\u7801
 login.btn.sign.up=\u514D\u8D39\u6CE8\u518C
 shop.product.details.details=\u5546\u54C1\u4ECB\u7ECD
