--- a/src/app_sa_zh_CN.properties
+++ b/src/app_sa_zh_CN.properties
@@ -60,6 +60,12 @@ sa.pd.brand.btn.add=\u8FFD\u52A0\u54C1\u724C
 sa.pd.brand.lbl.add=\u65B0\u54C1\u724C\u8FFD\u52A0
 sa.pd.brand.lbl.edit=\u54C1\u724C\u4FEE\u6539
 
+sa.pd.category.title=\u5206\u7C7B\u7BA1\u7406
+sa.pd.category.list.title=\u5206\u7C7B\u5217\u8868
+sa.pd.category.btn.add=\u8FFD\u52A0\u5206\u7C7B
+sa.pd.category.lbl.add=\u65B0\u5206\u7C7B\u8FFD\u52A0
+sa.pd.category.lbl.edit=\u5206\u7C7B\u4FEE\u6539
+
 sa.pd.attr.title=\u5C5E\u6027\u7BA1\u7406
 sa.pd.attr.list.title=\u5C5E\u6027\u5217\u8868
 sa.pd.attr.btn.remove.all=\u5220\u9664\u6240\u6709\u5C5E\u6027
