--- a/src/msg_zh_CN.properties
+++ b/src/msg_zh_CN.properties
@@ -2,6 +2,8 @@ msg.attr.remove=\u5220\u9664\u5C5E\u6027
 msg.attr.edit=\u4FEE\u6539\u5C5E\u6027
 msg.brand.remove=\u5220\u9664\u54C1\u724C
 msg.brand.edit=\u4FEE\u6539\u54C1\u724C
+msg.category.remove=\u5220\u9664\u5206\u7C7B
+msg.category.edit=\u4FEE\u6539\u5206\u7C7B
 msg.no.item=\u6682\u65E0{0}\u4FE1\u606F\uFF01
 msg.err.param=\u53C2\u6570\u6709\u8BEF\uFF01
 msg.suc.remove=\u5220\u9664\u6210\u529F\uFF01
@@ -27,7 +29,7 @@ msg.param.id=ID
 msg.param.name=\u540D\u79F0
 msg.param.pass=\u5BC6\u7801
 msg.param.brand=\u54C1\u724C
-msg.param.category=\u4EA7\u54C1\u5C5E\u6027
+msg.param.category=\u5206\u7C7B
 msg.param.attribute=\u5C5E\u6027
 msg.param.all.attr=\u6240\u6709\u5C5E\u6027
 msg.param.attr.=\u5C5E\u6027\uFF1AattrName
