finish edit category

--- a/src/msg_zh_CN.properties
+++ b/src/msg_zh_CN.properties
@@ -21,6 +21,8 @@ msg.admin.remove=\u5220\u9664\u7BA1\u7406\u5458
 msg.err.item={0}\u6709\u8BEF\uFF0C\u8BF7\u91CD\u65B0\u8F93\u5165
 msg.err.blank={0}\u4E3A\u5FC5\u586B\u9879
 msg.err.pass.confirm=\u786E\u8BA4\u5BC6\u7801\u9700\u4E0E\u5BC6\u7801\u4E00\u81F4
+msg.err.no.category=\u8BE5\u5206\u7C7B\u4E0D\u5B58\u5728\uFF0C\u8BF7\u5237\u65B0\u9875\u9762\u540E\u91CD\u8BD5\u3002
+msg.err.wrong.category.info=\u5206\u7C7B\u4FE1\u606F\u586B\u5199\u6709\u8BEF\uFF0C\u8BF7\u4FEE\u6539\u540E\u91CD\u65B0\u4FDD\u5B58\u3002
 
 msg.pro.remove=\u5220\u9664\u5546\u54C1
 msg.pro.edit=\u4FEE\u6539\u5546\u54C1
