add product index list

--- a/src/app_sa_zh_CN.properties
+++ b/src/app_sa_zh_CN.properties
@@ -8,7 +8,6 @@ sa.index.welcome=\u6B22\u8FCE\u4F7F\u7528\u4F9D\u52E4\u540E\u53F0\u7BA1\u7406\u7
 
 sa.header.logout=\u5B89\u5168\u9000\u51FA
 sa.header.order=\u8BA2\u5355\u7BA1\u7406
-sa.header.register.code=\u751F\u6210\u9080\u8BF7\u7801
 sa.header.order.detail=\u8BA2\u5355\u660E\u7EC6\u7BA1\u7406
 sa.header.user=\u7528\u6237\u7BA1\u7406
 sa.header.user.sa=\u8D85\u7EA7\u7BA1\u7406\u5458\u7BA1\u7406
@@ -18,13 +17,15 @@ sa.header.product.brand=\u54C1\u724C\u7BA1\u7406
 sa.header.product.category=\u5206\u7C7B\u7BA1\u7406
 sa.header.product.attribute=\u5546\u54C1\u5C5E\u6027\u7BA1\u7406
 sa.header.product.item=\u5546\u54C1\u5185\u5BB9\u7BA1\u7406
-sa.header.product.index.pro.list=\u7279\u8272\u5546\u54C1
 sa.header.quick.shopping=\u5FEB\u901F\u8D2D\u7269\u7BA1\u7406
 sa.header.inventory=\u8FDB\u9500\u5B58\u7BA1\u7406
 sa.header.inventory.info=\u5E93\u5B58\u4FE1\u606F
 sa.header.inventory.order.by.customer=\u6309\u5BA2\u6237\u6C47\u603B
 sa.header.inventory.all.orders=\u6C47\u603B
 sa.header.customer.manage=\u5BA2\u6237\u7BA1\u7406
+sa.header.sys.set=\u7CFB\u7EDF\u8BBE\u5B9A\u7BA1\u7406
+sa.header.sys.register.code=\u751F\u6210\u9080\u8BF7\u7801
+sa.header.sys.index.pro.list=\u7279\u8272\u5546\u54C1
 
 sa.user.lbl.sa=\u4FEE\u6539\u5BC6\u7801
 sa.user.lbl.old.password=\u539F\u5BC6\u7801
@@ -83,6 +84,11 @@ sa.pd.item.lbl.edit=\u5546\u54C1\u4FEE\u6539
 sa.best.pd.title=\u5FEB\u901F\u8D2D\u7269\u7BA1\u7406
 sa.best.pd.list.title=\u5FEB\u901F\u8D2D\u7269\u5217\u8868
 
-sa.role.300=11000,11001,11002,11003,12000,12100,12200,12300,12301,12302,12303,13000,13100,13101,13102,13103,13104,13200,13201,13202,13203,13204,13300,13302,13303,13304,13400,13402,13404,13500,14000,15000
-sa.role.200=11000,11001,11002,11003,12000,12100,12200,12300,12301,12302,13000,13100,13101,13102,13103,13104,13200,13201,13202,13203,13204,13300,13302,13303,13304,14000,15000
+sa.sys.product.index.list=\u7279\u8272\u5546\u54C1\u8BBE\u5B9A
+sa.pd.index.list.title=\u7279\u8272\u5546\u54C1\u5217\u8868
+sa.pd.index.btn.add=\u8FFD\u52A0\u5546\u54C1\u5230\u5217\u8868
+msg.pd.index.list.remove=\u4ECE\u5217\u8868\u4E2D\u5220\u9664\u5546\u54C1
+
+sa.role.300=11000,11001,11002,11003,12000,12100,12200,12300,12301,12302,12303,13000,13100,13101,13102,13103,13104,13200,13201,13202,13203,13204,13300,13302,13303,13304,13400,13402,13404,14000,15000,15100,15200
+sa.role.200=11000,11001,11002,11003,12000,12100,12200,12300,12301,12302,13000,13100,13101,13102,13103,13104,13200,13201,13202,13203,13204,13300,13302,13303,13304,14000,15000,15100
 sa.role.100=11000,11002,11003,12000,12300,12301,12302,12400
