--- a/src/msg_zh_CN.properties
+++ b/src/msg_zh_CN.properties
@@ -49,3 +49,4 @@ msg.param.bd.category.=\u5206\u7C7B\uFF1ACategoryName \u4E0B\u7684\u5546\u54C1\u
 msg.param.bd.all.item=\u6240\u6709\u5206\u7C7B\u4E0B\u5546\u54C1\u6E05\u5355
 msg.param.admin=\u7BA1\u7406\u5458
 msg.param.admin.=\u7BA1\u7406\u5458\uFF1Aadmin
+msg.param.product.index.list=\u7279\u8272\u5546\u54C1
