--- a/src/app_sa_zh_CN.properties
+++ b/src/app_sa_zh_CN.properties
@@ -17,7 +17,7 @@ sa.header.product.brand=\u54C1\u724C\u7BA1\u7406
 sa.header.product.category=\u5206\u7C7B\u7BA1\u7406
 sa.header.product.attribute=\u5546\u54C1\u5C5E\u6027\u7BA1\u7406
 sa.header.product.item=\u5546\u54C1\u5185\u5BB9\u7BA1\u7406
-sa.header.quick.shopping=\u5FEB\u901F\u8D2D\u7269\u7BA1\u7406
+sa.header.quick.shopping=\u5E38\u7528\u5546\u54C1\u7BA1\u7406
 sa.header.inventory=\u8FDB\u9500\u5B58\u7BA1\u7406
 sa.header.inventory.info=\u5E93\u5B58\u4FE1\u606F
 sa.header.inventory.order.by.customer=\u6309\u5BA2\u6237\u6C47\u603B
