--- a/src/app_shop_zh_CN.properties
+++ b/src/app_shop_zh_CN.properties
@@ -9,7 +9,7 @@ yiqin.phone=138 1115 9799
 yiqin.mail=support@electte.com
 shop.header.top.accout=\u6211\u7684\u4F9D\u52E4
 shop.header.top.wishlist=\u6536\u85CF\u5939
-shop.header.top.quick.shopping=\u5FEB\u901F\u8D2D\u7269
+shop.header.top.quick.shopping=\u5E38\u7528\u5546\u54C1
 shop.header.top.code.shopping=\u7F16\u7801\u4E0B\u5355
 shop.header.top.order.shopping=\u6211\u7684\u8BA2\u5355
 shop.header.top.cart=\u8D2D\u7269\u8F66
@@ -76,6 +76,14 @@ shop.footer.widget.policies.billing.system=\u8BA1\u8D39\u7CFB\u7EDF
 shop.footer.widget.subscription=\u5173\u4E8E\u8BA2\u9605
 shop.footer.widget.subscription.info=\u53EA\u8981\u4E00\u4E2AE-mail\u5C31\u80FD\u4E13\u4EAB\u7CBE\u9009\u7279\u60E0
 shop.footer.bottom.copyright=Copyright \u00A9 2014-2015 \u4F9D\u52E4\u529E\u516C ELECTTE.COM \u7248\u6743\u6240\u6709 .
+
+shop.right.shortcut.login=\u767B\u5F55
+shop.right.shortcut.account=\u6211\u7684<br>\u4F9D\u52E4
+shop.right.shortcut.all.product=\u6240\u6709<br>\u5546\u54C1
+shop.right.shortcut.quick.shopping=\u5E38\u7528<br>\u5546\u54C1
+shop.right.shortcut.jiesuan=\u7ED3\u7B97
+shop.right.shortcut.to.top=\u9876\u90E8
+
 yiqin.record=\u4EACICP\u590715013259\u53F7-1
 shop.product.list.zhekou.info=\u767B\u5F55\u540E\u663E\u793A\u6298\u6263\u4EF7
 
