--- a/src/app_sa_zh_CN.properties
+++ b/src/app_sa_zh_CN.properties
@@ -82,8 +82,8 @@ sa.pd.item.btn.add=\u8FFD\u52A0\u5546\u54C1
 sa.pd.item.lbl.add=\u65B0\u5546\u54C1\u8FFD\u52A0
 sa.pd.item.lbl.edit=\u5546\u54C1\u4FEE\u6539
 
-sa.best.pd.title=\u5FEB\u901F\u8D2D\u7269\u7BA1\u7406
-sa.best.pd.list.title=\u5FEB\u901F\u8D2D\u7269\u5217\u8868
+sa.best.pd.title= \u5E38\u7528\u5546\u54C1\u7BA1\u7406
+sa.best.pd.list.title=\u5E38\u7528\u5546\u54C1\u5217\u8868
 
 sa.sys.product.index.list=\u7279\u8272\u5546\u54C1\u8BBE\u5B9A
 sa.pd.index.list.title=\u7279\u8272\u5546\u54C1\u5217\u8868
