--- a/src/app_sa_zh_CN.properties
+++ b/src/app_sa_zh_CN.properties
@@ -53,8 +53,8 @@ sa.btn.save=\u4FDD\u5B58
 sa.btn.reset=\u91CD\u7F6E
 sa.btn.modify=\u4FEE\u6539
 
-sa.pd.lbl.select.category=\u9009\u62E9\u5206\u7C7B
-sa.pd.lbl.select.user=\u9009\u62E9\u7528\u6237
+sa.pd.lbl.select.category=\u5206\u7C7B
+sa.pd.lbl.select.user=\u7528\u6237
 
 sa.pd.brand.title=\u54C1\u724C\u7BA1\u7406
 sa.pd.brand.list.title=\u54C1\u724C\u5217\u8868
