--- a/src/config_sa.properties
+++ b/src/config_sa.properties
@@ -5,5 +5,9 @@ tpl.start.row.11=9
 ## export order to Yiqin Template 21 ~
 tpl.file.21=com/yiqin/template/tpl_yiqin_21.xlsx
 tpl.start.row.21=8
+tpl.name.prefix.21=yiqin
 
 ## export order to XX Template 31 ~
+tpl.file.31=com/yiqin/template/tpl_boda_31.xlsx
+tpl.start.row.31=6
+tpl.name.prefix.31=boda
