--- a/src/app_sa_zh_CN.properties
+++ b/src/app_sa_zh_CN.properties
@@ -83,6 +83,8 @@ sa.pd.item.btn.add=\u8FFD\u52A0\u5546\u54C1
 sa.pd.item.lbl.add=\u65B0\u5546\u54C1\u8FFD\u52A0
 sa.pd.item.lbl.edit=\u5546\u54C1\u4FEE\u6539
 
+sa.pd.image.title=\u5546\u54C1\u56FE\u7247\u7BA1\u7406
+
 sa.best.pd.title= \u5E38\u7528\u5546\u54C1\u7BA1\u7406
 sa.best.pd.list.title=\u5E38\u7528\u5546\u54C1\u5217\u8868
 
