1, add attribute-param for change color 2, dont show attribute-cost

--- a/src/app_shop_zh_CN.properties
+++ b/src/app_shop_zh_CN.properties
@@ -117,4 +117,5 @@ shop.product.details.spe.parameters=\u89C4\u683C\u53C2\u6570
 shop.product.details.reviews=\u5546\u54C1\u8BC4\u4EF7
 shop.product.details.productId=\u5546\u54C1ID\uFF1A
 shop.product.details.color=\u989C\u8272\u9009\u62E9\uFF1A
+shop.product.details.param=\u89C4\u683C\u9009\u62E9\uFF1A
 cart.item.product.color=\u989C\u8272\uFF1A
