--- a/src/msg_zh_CN.properties
+++ b/src/msg_zh_CN.properties
@@ -23,6 +23,7 @@ msg.err.blank={0}\u4E3A\u5FC5\u586B\u9879
 msg.err.pass.confirm=\u786E\u8BA4\u5BC6\u7801\u9700\u4E0E\u5BC6\u7801\u4E00\u81F4
 msg.err.no.category=\u8BE5\u5206\u7C7B\u4E0D\u5B58\u5728\uFF0C\u8BF7\u5237\u65B0\u9875\u9762\u540E\u91CD\u8BD5\u3002
 msg.err.wrong.category.info=\u5206\u7C7B\u4FE1\u606F\u586B\u5199\u6709\u8BEF\uFF0C\u8BF7\u4FEE\u6539\u540E\u91CD\u65B0\u4FDD\u5B58\u3002
+msg.alert.remove.user=\u786E\u5B9A\u5220\u9664\u7528\u6237\uFF1AUserId \uFF1F\u7528\u6237\u5220\u9664\u540E\uFF0C\u7528\u6237\u6240\u6709\u6570\u636E\u5747\u4F1A\u88AB\u6E05\u9664\uFF01
 
 msg.pro.remove=\u5220\u9664\u5546\u54C1
 msg.pro.edit=\u4FEE\u6539\u5546\u54C1
