--- a/src/config_sa.properties
+++ b/src/config_sa.properties
@@ -11,3 +11,10 @@ tpl.name.prefix.21=yiqin
 tpl.file.31=com/yiqin/template/tpl_boda_31.xlsx
 tpl.start.row.31=6
 tpl.name.prefix.31=boda
+
+## export order to XX Template 41 ~
+tpl.file.41=com/yiqin/template/tpl_tax_41.xlsx
+tpl.start.row.41=10
+tpl.name.prefix.41=tax
+
+tpl.tax.rate=0.03
